--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,10 @@ ul {
     padding: 0px;
 }
 
+.hidden{
+    display: none;
+}
+
 .bg-promo {
     background-image: url(../media/main1/mainblack.png), url(../media/main1/main.jpg);
     background-blend-mode: soft-light;
