--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,7 @@ h3 {
 }
 
 .bg-promo {
-    background-image: url(../media/main1/mainblack.png), url(../media/main1/main.jpg);
-    background-blend-mode: soft-light;
+    background-image: url(../media/main1/main1.jpg);
     background-size: cover;
     color: #fff;
 }
@@ -225,13 +224,17 @@ header {
         display: flex;
         flex-direction: column;
         position: fixed;
-        width: 98%;
         background-color: #303b41;
+        z-index: 1;
+        width: 100%;
     }
     .mob-logo {
         margin-bottom: 15px;
         display: flex;
         justify-content: space-between;
+    }
+    .logo {
+        padding-right: 30px;
     }
     .bg-promo .container {
         display: none;
@@ -258,6 +261,7 @@ header {
     }
     .wr-content {
         padding-left: 0;
+        text-align: center;
     }
     .wr-content h1 {
         font-size: 60px;
@@ -272,84 +276,12 @@ header {
     }
 
     .bg-promo {
-        background-image: url(../media/main1/mainblack.png), url(../media/main1/main_optimized.jpg);
+        background-image: url(../media/main1/main1.jpg);
         background-size: auto;
         background-repeat: no-repeat;
+        background-position: center;
     }
-} 
-
-@media screen and (max-width: 750px) {
-    .wr-mob {
-        padding-top: 15px;
-        padding-left: 15px;
-        padding-right: 5px;
-        display: flex;
-        flex-direction: column;
-        position: fixed;
-        width: 95%;
-        background-color: #303b41;
-    }
-    .mob-logo {
-        margin-bottom: 15px;
-        display: flex;
-        justify-content: space-between;
-    }
-    .bg-promo .container {
-        display: none;
-    }
-    .mob-container ul {
-        display: none;
-        left: calc(50% - 135px);
-        position: relative;
-    }
-    ul.mob-container {
-        height: 100vh;
-    }
-    .mob-container li:hover ul {
-        display: block;
-    }
-    .mob-container li {
-        margin-bottom: 10px;
-        font-size: 15px;
-        text-transform: uppercase;
-        position: relative;
-    }
-    .mob-container li:hover {
-        color: rgb(255, 217, 0);
-    }
-    .wr-content {
-        padding-left: 0;
-    }
-    .wr-content h1 {
-        font-size: 30px;
-        margin-top: 50px;
-    }
-    .wr-content h2 {
-        font-size: 15px;
-        letter-spacing: 5px;
-    }
-    .wr-content p {
-        min-width: 0;
-    }
-
-    .bg-promo {
-        background-image: url(../media/main1/mainblack.png), url(../media/main1/main_optimized.jpg);
-        background-size: auto;
-        background-repeat: no-repeat;
-    }
-} 
-@media screen and (max-width: 750px) {
-.wr-mob {
-    padding-top: 15px;
-    padding-left: 15px;
-    padding-right: 40px;
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    width: 85%;
-    background-color: #303b41;
-}
-}
+}    
 
 /*page2*/
 .wr-search {
@@ -430,7 +362,7 @@ text-transform: uppercase;
 }
 /*page3*/
 .wr-aboutus {
-    background-image: url(../media/main3/main-right.png);
+    background-image: url(../media/main3/main-right.jpg);
     background-position: right;
     background-size: cover;
     display: flex;
@@ -563,7 +495,7 @@ text-transform: uppercase;
 }
 /*page5*/
 .wr-tourcost {
-    background-image: url(../media/main5/main.png), url(../media/main5/main2.png);
+    background-image: url(../media/main5/main.jpg), url(../media/main5/main2.png);
     background-repeat: no-repeat, repeat;
     background-size: contain;
     background-position: top, bottom;
@@ -638,6 +570,10 @@ text-transform: uppercase;
 }
 
 @media screen and (max-width: 1100px) {
+    .wr-tourcost {
+        background-image: url(../media/main5/main.jpg);
+        background-size: cover;
+    }
     .wr-tourcost h3,
     .wr-tourcost h2 {
         font-size: 30px;
@@ -794,11 +730,9 @@ text-transform: uppercase;
 }
 /*page7*/
 .wr-packandgo {
-    background-image: url(../media/main7/main-top.png), url(../media/main7/main-bottom.png);
+    background-image: url(../media/main7/main-top.jpg), url(../media/main7/main-bottom.png);
     background-position: top, bottom;
     background-repeat: no-repeat, repeat;
-    padding-top: 80px;
-    padding-bottom: 150px;
     overflow: hidden;
     background-size: contain;
 }
@@ -807,6 +741,8 @@ text-transform: uppercase;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 80px;
+    padding-bottom: 150px;
 }
 .pack-and-go .tour {
     display: flex;
@@ -911,6 +847,10 @@ text-transform: uppercase;
 }
 
 @media screen and (max-width: 1100px) {
+    .pack-and-go {
+    background-image: url(../media/main7/main-top.jpg);
+    background-size: cover;
+    }
     .pack-and-go h2,
     .pack-and-go h3 {
         font-size: 30px;
@@ -942,9 +882,8 @@ text-transform: uppercase;
 }
 /*page8*/
 .wr-goexploore {
-    background-image: url(../media/main8/main.png), url(../media/main8/main-white.png);
+    background-image: url(../media/main8/main-white.jpg);
     background-repeat: no-repeat;
-    background-blend-mode: lighten;
     padding-top: 110px;
     padding-bottom: 80px;
     overflow: hidden;
@@ -987,6 +926,7 @@ text-transform: uppercase;
 .directions div img {
     border-radius: 10px 10px 0 0;
     margin-bottom: calc(50% - 225px);
+    width: 100%;
 }
 .directions div a {
     text-transform: uppercase;
@@ -1019,6 +959,7 @@ text-transform: uppercase;
     font-size: 17px;
     text-align: center;
 }
+
 
 @media screen and (max-width: 1100px) {
     .wr-goexploore {
@@ -1082,6 +1023,7 @@ text-transform: uppercase;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     margin-right: 60px;
 }
 .wr-combinedtours .img-caption {
@@ -1138,6 +1080,7 @@ text-transform: uppercase;
         padding: 0;
         display: flex;
         align-items: center;
+        padding: 15px;
     }
     .wr-combinedtours .inf-mob {
         display: flex;
@@ -1150,12 +1093,19 @@ text-transform: uppercase;
     }
     .wr-combinedtours .inf-mob a {
         min-width: max-content;
+        margin-bottom: 30px;
+    }
+    .wr-combinedtours .wr-img-caption  {
+        margin-right: 10px;
+    }
+    .wr-combinedtours h2 {
+        font-size: 30px;
     }
 }
 
 /*page10*/
 .wr-customer-reviews {
-    background-image: url(../media/main10/main1.png);
+    background-image: url(../media/main10/main.jpg);
     overflow: hidden;
 }
 .wr-customer-reviews .slider-container {
@@ -1254,6 +1204,20 @@ margin-bottom: 10px;
     outline: none;
 }
 
+@media screen and (max-width: 1100px) {
+    .wr-customer-reviews {
+        background-size: cover;
+    }
+    .slider-container {
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+    .customer-reviews h2,
+    .customer-reviews h3 {
+        text-align: center;
+    }
+}
+
 /*page11*/
 .wr-contact {
     background-image: url(../media/main11/main-1.png);
@@ -1335,17 +1299,17 @@ margin-bottom: 10px;
     color: #f2c339;
 }
 .social-infa a:hover {
-    transform: scale(1.1);
-    background-color: rgb(153, 175, 238);
-    border-color: #bbb;
-    transition: 3s;
+    transform: scale(-1);
+    transition: 2s;
 }
 
 @media screen and (max-width: 1100px) {
     .wr-contact {
-        background-image: url(../media/main11/main.png);
-        background-position: inherit;
+        background-image: url(../media/main11/main-1.png);
         background-size: auto;
+    }
+    .wr-contact .container {
+        text-align: center;
     }
     .info-contacts img {
         display: none;
@@ -1368,10 +1332,7 @@ margin-bottom: 10px;
 .wr-footer {
     background-color: #f0d839;
     padding-top: 65px;
-    padding-bottom: 70px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding-bottom: 65px;
     text-align: center;
     overflow: hidden;
 }
@@ -1380,9 +1341,12 @@ margin-bottom: 10px;
     flex-direction: column;
     justify-content: center;
 }
-.wr-footer div {
-    white-space: pre-wrap;
-    line-height: 25px;
+.wr-footer p {
+    margin-bottom: 20px;
+    font-weight: 600;
+}
+.wr-footer p:nth-child(2){
+    margin-bottom: 0;
 }
 
 
