--- a/css/style.css
+++ b/css/style.css
@@ -865,6 +865,9 @@ text-transform: uppercase;
 .pack-and-go .second-tour a {
     margin-bottom: 5px;
 }
+.slider-mb {
+    display: none;
+}
 
 @media screen and (max-width: 1100px) {
     .pack-and-go {
