--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,9 @@ header {
 .sotial .icons-sotial {
     padding-left: 73px;
 }
+.sotial .icons-sotial img:hover {
+    transform: scale(1.3);
+}
 .login {
     margin-left: 37px;
 }
@@ -262,7 +265,7 @@ header {
     .wr-content {
         padding-left: 15px;
         padding-right: 15px;
-        padding-bottom: 140px;
+        padding-bottom: 50px;
         text-align: center;
     }
     .wr-content h1 {
@@ -356,6 +359,9 @@ text-transform: uppercase;
 }
 
 @media screen and (max-width: 1250px) {
+    .wr-search .container {
+        padding-bottom: 50px;
+    }
     .wr-search form {
         display: block;
         min-width: 0;
@@ -498,6 +504,7 @@ text-transform: uppercase;
     .wr-services .container {
         padding-right: 10px;
         padding-left: 10px;
+        padding-bottom: 0;
     }
     .services li {
         min-width: 0;
@@ -741,11 +748,12 @@ text-transform: uppercase;
         text-align: left;
     }
     .tourselectiontransport img {
+        margin-bottom: 10px;
         margin-right: 0;
     }
-    .tourselectiontransport .flight,
-    .tourselectiontransport .cab {
-        position: inherit;
+    .tourselectiontransport div {
+        display: flex;
+        flex-direction: column;
     }
 }
 /*page7*/
@@ -873,10 +881,12 @@ text-transform: uppercase;
     .pack-and-go {
     background-image: url(../media/main7/main-top.jpg);
     background-size: cover;
+    padding-bottom: 50px;
     }
     .pack-and-go h2,
     .pack-and-go h3 {
         font-size: 30px;
+        margin-bottom: 30px;
     }
     .pack-and-go .tour {
         flex-direction: column;
@@ -888,13 +898,10 @@ text-transform: uppercase;
     .pack-and-go .second-tour {
         position: inherit;
         bottom: 0;
-        transform: scale(0.9);
-    }
-    .pack-and-go .tour .second-tour img {
-        max-height: 240px;
+        transform: scale(1);
     }
     .pack-and-go .tour img {
-        max-height: 240px;
+        display: none;
     }
     .pack-and-go .second-tour a {
         margin-bottom: 20px;
@@ -985,6 +992,9 @@ text-transform: uppercase;
     font-size: 17px;
     text-align: center;
 }
+.sl-container {
+    display: none;
+}
 
 
 @media screen and (max-width: 1100px) {
@@ -1004,8 +1014,23 @@ text-transform: uppercase;
         margin-bottom: 15px;
         margin-right: 0;
     }
+    .sl-container1 {
+        display: none;
+    }
     .sl-container {
-        width: 90%;
+        display: inherit;
+    }
+    .sl-container .slick-slide img {
+        border-radius: 10px 10px 0 0;
+        margin-bottom: -30px;
+        z-index: 1;
+    }
+    .directions div a {
+        z-index: 2;
+    }
+    .sl-container .slick-list {
+        max-width: 410px;
+        margin-left: calc(50% - 205px);
     }
 }
 
@@ -1102,6 +1127,7 @@ text-transform: uppercase;
         padding-left: 10px;
         padding-right: 10px;
         margin-left: 0;
+        padding-bottom: 0;
     }
     .wr-combinedtours .container {
         background-color: rgba(77, 47, 33, 0.5);
@@ -1341,6 +1367,8 @@ margin-bottom: 10px;
     }
     .wr-contact .container {
         text-align: center;
+        padding-bottom: 0;
+        padding-top: 95px;
     }
     .info-contacts img {
         display: none;
@@ -1355,6 +1383,15 @@ margin-bottom: 10px;
     }
     .social-infa {
         display: none;
+    }
+    .contact-us h2 {
+        margin-bottom: 60px;
+    }
+    .contact-us h3 {
+        margin-bottom: 115px;
+    }
+    .location-icon {
+        margin-bottom: 35px;
     }
 }
 
@@ -1380,7 +1417,12 @@ margin-bottom: 10px;
     margin-bottom: 0;
 }
 
-
+@media screen and (max-width: 1100px) {
+    .wr-footer {
+       padding-top: 30px;
+       padding-bottom: 30px;
+    }
+}
 
 
 
